--- a/templates/agent-common.erb
+++ b/templates/agent-common.erb
@@ -1,3 +1,3 @@
-MESOS_ATTRIBUTES=<% attributes.sort.each do |key, val| -%>
+MESOS_ATTRIBUTES=<% @attributes.sort.each do |key, val| -%>
   <%= key %>:<%= val %>;
 <% end -%>
