fix syntax error

--- a/templates/agent-common.erb
+++ b/templates/agent-common.erb
@@ -1,1 +1,1 @@
-MESOS_ATTRIBUTES=<% @attributes.sort.each do |key, val| <%= key -%>:<%= val -%>;<% end -%>
+MESOS_ATTRIBUTES=<% @attributes.sort.each do |key, val| -%><%= key -%>:<%= val -%>;<% end -%>
