--- a/templates/agent-common.erb
+++ b/templates/agent-common.erb
@@ -2,3 +2,6 @@ MESOS_ATTRIBUTES=<% @attributes.sort.each do |key, val| -%><%= key -%>:<%= val -
 <% @mesos.sort.each do |key, val| -%>
 <%= key.upcase -%>=<%= val %>
 <% end -%>
+<% if @region or @zone -%>
+MESOS_DOMAIN="/var/lib/dcos/mesos-agent-domain.json"
+<% end -%>
