--- a/templates/agent-common.erb
+++ b/templates/agent-common.erb
@@ -3,7 +3,7 @@ MESOS_ATTRIBUTES=<% @attributes.sort.each do |key, val| -%><%= key -%>:<%= val -
 <%= key.upcase -%>=<%= val %>
 <% end -%>
 <% unless @resources.empty? -%>
-MESOS_RESOURCES="<%= scope.function_dcos_resources([@resources]).to_s %>"
+MESOS_RESOURCES="<%= scope.function_dcos_resources([@resources]).gsub('"', '\"') %>"
 <% end -%>
 <% if @region or @zone -%>
 MESOS_DOMAIN="/var/lib/dcos/mesos-agent-domain.json"
